[tool.poetry]
name = "psa-notebook"
version = "0.1.2"
description = "Jupyter notebook for power system analysis in the browser."
authors = ["Edward Xu <edxu96@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlite-core = "~0.1.0"
jupyterlab = "~3.6.3"
jupyterlite-pyodide-kernel = "~0.0.6"
jupyterlite-xeus-sqlite = "~0.2.1"
jupyterlab-geojson = "~3.3.1"
jupyterlite-xeus-python = "~0.8.0"
ipyleaflet = "~0.17.2"
libarchive-c = "~4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
